# SampleApp

./: CMakeLists.txt  Resource.h  SampleApp.BAK  SampleApp.cpp  SampleApp.h  SampleApp.rc  SampleApp.sln  SampleApp.vcxproj  SampleApp.vcxproj.filters
.github/workflows/: main.yml
SampleApp/x64/Debug/: SampleApp.exe.recipe  SampleApp.ilk  SampleApp.res  vc143.idb
SampleApp/x64/Debug/SampleApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SampleApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
test_my_class/: test.cpp  test_fixture.cpp  test_fixture.h  test_my_class.sln  test_my_class.vcxproj
test_my_class/test_my_class/x64/Debug/: test_my_class.exe.recipe  test_my_class.vcxproj.FileListAbsolute.txt
test_my_class/test_my_class/x64/Debug/test_my_class.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_my_class.lastbuildstate
